Fix forecast card gap

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -20,6 +20,7 @@ body {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    gap: 1em;
     // align-self: space-between;
   }
 }
@@ -104,7 +105,7 @@ body {
     font-weight: 700;
     font-size: 24px;
     color: #e7e7eb;
-    padding: 0.4em 0 .8em;
+    padding: 0.4em 0 0.8em;
   }
 
   &__highlight {
